--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -75,7 +75,7 @@
     <string name="pace_min_mi">Pace in min/mi</string>
     <string name="elevation_feet">Elevation gain in feet</string>
     <string name="distance_mi">Distance in miles</string>
-    <string name="version_info"><![CDATA[<b>Version:</b> %1$s - %2$s (%3$d)]]></string>
+    <string name="version_info"><![CDATA[<b>Version:</b> %s - %s (%d)]]></string>
     <string name="error_reading_trackpoints">Error reading trackpoints: %s</string>
     <string name="debug_trackpoints">Debug trackpoints</string>
     <string name="debug_trackpoints_info">Trackpoints received: %1$d\nTrackpoints invalid: %2$d\nTrackpoints drawn: %3$d\nTrackpoints pause: %4$d\nSegments: %5$d\nProtocol version: %6$d</string>
