--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -78,7 +78,12 @@
     <string name="version_info"><![CDATA[<b>Version:</b> %s - %s (%d)]]></string>
     <string name="error_reading_trackpoints">Error reading trackpoints: %s</string>
     <string name="debug_trackpoints">Debug trackpoints</string>
-    <string name="debug_trackpoints_info">Trackpoints received: %1$d\nTrackpoints invalid: %2$d\nTrackpoints drawn: %3$d\nTrackpoints pause: %4$d\nSegments: %5$d\nProtocol version: %6$d</string>
+    <string name="debug_trackpoints_info">Trackpoints received: %1$d
+\nTrackpoints invalid: %2$d
+\nTrackpoints drawn: %3$d
+\nTrackpoints pause: %4$d
+\nSegments: %5$d
+\nProtocol version: %6$d</string>
     <string name="track_color">Track color</string>
     <string name="track_color_mode_uni">Unicolor</string>
     <string name="track_color_mode_by_track">Color by track</string>
