--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -107,9 +107,11 @@
     <string name="distancegraph">distancegraph</string>
     <string name="durationgraph">durationgraph</string>
     <string name="runsgraph">runsgraph</string>
-    <string name="average_elevation_vs_speed_range" />
+    <string name="average_elevation_vs_speed_range">Average Elevation vs Speed Range</string>
     <string name="Distance_Graph">Distance Graph</string>
     <string name="Duration_Graph">Duration Graph</string>
     <string name="Runs_Graph">Runs Graph</string>
+    <string name="frequency_vs_speed_range">Frequency vs Speed Range</string>
+    <string name="frequency_vs_time_distribution">Frequency vs Time Distribution</string>
 
 </resources>
